--- a/src/style.css
+++ b/src/style.css
@@ -190,7 +190,7 @@ button:focus {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #c95bf5;
+  background: #E5FCC2;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -277,17 +277,17 @@ button:focus {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #2A363B;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: #2A363B !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #FF847C !important;
 }
 
 @media (max-width: 767px) {
@@ -367,7 +367,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #6C5C7B;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -375,13 +375,13 @@ button:focus {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #6C5C7B;
 }
 
 .home-social-icons:hover {
   color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  box-shadow: 0 0 5px #6C5C7B;
+  text-shadow: 0 0 2px #6C5C7B;
 }
 
 .social-icons {
@@ -391,7 +391,7 @@ button:focus {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #6C5C7B !important;
 }
 
 /* --------- */
@@ -514,14 +514,14 @@ button:focus {
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color: #b59a7f !important;
+  border-color: #b59a7f !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  background-color: #F8B195 !important;
+  border-color: #F8B195 !important;
 }
 .btn:focus {
   outline: none !important;
@@ -688,8 +688,8 @@ button:focus {
 }
 
 .like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
+  background-color: #934c5e !important;
+  border-color: #934c5e !important;
   padding: 0.25rem 0.98rem !important;
   border-radius: 5px !important;
   line-height: 1.4 !important;
@@ -698,8 +698,8 @@ button:focus {
 
 .like-btn:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #99B898 !important;
+  border-color: #99B898 !important;
 }
 
 .animate-like {
@@ -731,8 +731,8 @@ button:focus {
 
 .fork-btn-inner:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #99B898 !important;
+  border-color: #99B898 !important;
 }
 .fork-btn-inner::after {
   display: none !important;
